# kegg2bipartitegraph

./: CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-publish.yml
archive/: README.md
data/article_Webber_Zendrera_et_al_2021/: README.md
data/article_Webber_Zendrera_et_al_2021/seeds/: create_seeds.py  hyperterm_med_seeds.sbml  seeds_meso_medium.sbml  seeds_psychromed.sbml  seeds_therm_med.sbml  union_all_seeds.sbml
kegg2bipartitegraph/: __init__.py  __main__.py  eggnog.py  esmecata.py  genbank.py  graph.py  kofamkoala.py  mapping.py  organism.py  picrust.py  reconstruct_from_esmecata.py  reference.py  sbml.py  scope.py  seeds.py  utils.py
kegg2bipartitegraph/data/kegg_model/: ec_to_gos.tsv  kegg_compound_name.tsv  kegg_hierarchy.json  kegg_mapping.tsv  kegg_metadata.json  kegg_model.graphml  kegg_modules.tsv  kegg_pathways.tsv  kegg_removed_changed_reaction.tsv  seed_hyperterm_med.sbml  seed_hyperterm_med.txt  seed_union_all.sbml  seed_union_all.txt  seeds_meso_medium.sbml  seeds_meso_medium.txt  seeds_psychromed.sbml  seeds_psychromed.txt  seeds_therm_med.sbml  seeds_therm_med.txt
test/: seq_test.faa  test_eggnog_mapper.py  test_esmecata.py  test_genbank.py  test_kofamkoala.py  test_organism.py  test_picrust.py  test_reference.py  test_scope.py
test/eggnog-mapper/: result.emapper.annotations.tsv
test/esmecata_annotation_folder/annotation_reference/: taxon_test.tsv
test/genbank/: betaox.gbk
test/kofam_koala/: result.txt
test/scope_data/: scope_seed.txt
test/scope_data/graphml/: orgA.graphml
